css/style.css
@charset "UTF-8";

@font-face {
  font-family: 'Monaco';
  src: url('../fonts/monaco.ttf');
}

/* AHRS CSS STYLESHEET */
/* Components:
 *  Main Container    id    ahrs_container
 *  Scroll Precvent   id    scroll_prevent
 *  Sky Container     id    sky_container
 *  Sky Mask          id    sky_mask
 *
 *  Simulate Tag      id    simulate_tag
 *
 *  Tape Class        class tape
 *  Speed Tape        id    speed_tape
      Tape Scroll     id    speed_tape_scroll
      Tape Text       id    speed_tape_text
      Tape Counter    id    speed_tape_counter
      Index Holder    id    speed_tape_index_holder
      Tick Holder     id    speed_tape_tick_holder
        Color Bar     class speed_tape_color_bar
      Tape Index      class speed_tape_index
      Counter Holder  id    speed_counter_holder
      Speed Counter   id    speed_counter
      Annun           id    speed_annun
      Annun Text      id    speed_annun_text
 *  H Tick Class      class h_tick
 *  V Tick Class      class v_tick
 *  Alt Tape          id    alt_tape
      Tape Scroll     id    alt_tape_scroll
      Tape Text       id    alt_tape_text
      Tape Counter    id    alt_tape_counter
      Index Holder    id    alt_tape_index_holder
      Tick Holder     id    alt_tape_tick_holder
      Tape Index      class alt_tape_index
      Counter Holder  id    alt_counter_holder
      Speed Counter   id    alt_counter
      V Speed         id    alt_vspeed
      Pointer         id    vspeed_pointer
        Outer         id    vspeed_pointer_outer
      Annun           id    alt_annun
      Annun Text      id    alt_annun_text
 *  Heading Tape      id    heading_tape
      Scroll Hold     id    heading_tape_holder
      Tape Scroll     id    heading_tape_scroll
      Annun           id    heading_annun
      Heading Text    id    heading_text
      Pointer         id    heading_pointer
 *  Virtual Horizion  id    vhorizon
      User Bars       id    user_bars
      L User Bar      id    left_user_bar
      C User Bar      id    center_user_bar
      C User Bar Mask id    center_user_bar_mask
      R User Bar      id    right_user_bar
      Arrow Right     id    user_arrow_right
      Arrow Left      id    user_arrow_left
      Angle Pointer   id    user_angle_pointer
      SVG Bar         id    vhor_bar
      Pitch Indicator id    pitch_indicator
      Pitch Scroll    id    pitch_tape_scroll
      Pitch Tick      class ahrs_tick
      Pitch Text      class ahrs_text
      Chevron         class ahrs_chevron
 *  Slip Skid Holder  id    slip_skid_holder
      Slip Skid Bar   class slip_skid_bar
      Slip Bar Right  class slip_skid_bar_right
      Slip Skid Ball  id    slip_skid_ball
 *  Readouts          id    readouts
      Readout         class readout
      Pitch Readout   id    pitch_readout
      Roll Readout    id    roll_readout
 *  Invalid Holder    class invalid_holder
      invalid         class invalid
 *  Message Flag      id    message_flag
 *  Overheat Flag     id    overheat_flag
 *  G METERS          id    g_meter
      Pointer         id    g_pointer
      Text            class g_text
      Ptr Triangle    id    g_pointer_triangle
 *  Sat Count         id    sat_count
      Sat Count Text  id    sat_count_text
 *  FMU (Horizontal)  class fmu_h
    FMU (Verticle)    class fmu_v
      Alt FMU         id    alt_fmu
      Speed FMU       id    speed_fmu
      Heading FMU     id    hdg_fmu
      Hdg Arrow       id    hdg_fmu_arrow
 */
html {
  --flight_angle: 0deg;
  --slip_skid: 0px;
  --speed_counter_speed: 1s;
  --ease_time: 0.2s;
  /* AHRS EASING */
  --hdg_ease_time: 0.2s;
  /* HEADING EASING */
  --aux_ease_time: 0.2s;
  /* OTHER EASING */
  --pitch_amount: 0px;
  background-color: #000;
}

body {
  margin: 0px;
  overflow: hidden;
}

#ahrs_container {
  width: 100%;
  height: 555px;
  background-color: #53350e;
  margin: 0 auto;
  position: relative;
  overflow: hidden;
}

#scroll_prevent {}

#sky_container {
  width: 100%;
  height: 100%;
  transform: rotate(var(--flight_angle));
  transition: transform var(--ease_time) ease-out 0s;
}

#sky_mask {
  width: 200%;
  height: 200%;
  /* Mask sky colors */
  background: linear-gradient(to bottom, #2a48fb, #4f60e0);
  border-bottom: 4px solid white;
  position: relative;
  bottom: 150%;
  left: -50%;
  transform: translateY(var(--pitch_amount));
  transition: transform var(--ease_time) ease-out 0s;
}

#simulate_tag {
  position: absolute;
  top: 28px;
  left: 7px;
  font-family: 'Monaco';
  font-size: 23px;
  color: white;
  background-color: rgba(250, 0, 0, 0.7);
  border-radius: 20px;
  padding: 5px;
  z-index: 5;
  display: none;
}

/* ---------------- Tapes ---------------- */
.tape {
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  border: 1px solid #333333;
  position: absolute;
  top: 0;
  overflow: hidden;
}

.h_tick {
  width: 110%;
  height: 4px;
  background-color: #FFF;
  position: absolute;
  right: 1px;
  z-index: -2;
}

.v_tick {
  height: 10px;
  width: 4px;
  background-color: #FFF;
  position: absolute;
  /* top: 0px; */
  bottom: 0px;
  transition: unset;
  z-index: -2;
}

.tape_shadow {
  position: absolute;
  left: -20px;
  top: 0px;
  right: -20px;
  bottom: 0px;
  box-shadow: inset 0px 0px 46px 2px #000;
}

/* --------- Speed Tape --------- */
#speed_tape {
  width: 180px;
  left: 0px;
  z-index: 0;
}

#speed_tape_scroll {
  position: relative;
  transition: all var(--aux_ease_time) ease-out 0s;
  top: -81px;
  transform: translateZ(0);
  z-index: -1;
}

#speed_tape_index_holder {
  width: 70%;
  height: auto;
  position: relative;
  float: left;
}

#speed_tape_tick_holder {
  position: relative;
  width: 20px;
  float: right;
  /*margin-top: 17px;
  margin-bottom: 10px;*/
}
/* ... */

